import optimization, refactor